--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<title>Peyton Manning</title>
 	</head>
 	<body>
+		<h1>Heading Example</h1>
 		<p>Replace this content with your own.</p>
 	</body>
 </html>
