--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<title>Peyton Manning: The Case for MVP</title>
 	</head>
 	<body>
-		<header>Mile High Feeling for the Mile High City</header>
-			<p>If a team has multiple skilled players at the same position, they say it is a good problem to have. Well, the NFL has a good problem going, as their league boasts two individuals deserving of the coveted Most Valuable Player award. It is a good problem because it is a hot topic everyone is discussing nationally, but also because Peyton Manning and Adrian Peterson performed phenomenally this season. What’s even more amazing, is that each is coming off important injuries; a torn ACL for Peterson and multiple neck surgeries for Manning.</p>
+		<h1>Mile High Feeling for the Mile High City</h1>
+		<p>If a team has multiple skilled players at the same position, they say it is a good problem to have. Well, the NFL has a good problem going, as their league boasts two individuals deserving of the coveted Most Valuable Player award. It is a good problem because it is a hot topic everyone is discussing nationally, but also because Peyton Manning and Adrian Peterson performed phenomenally this season. What’s even more amazing, is that each is coming off important injuries; a torn ACL for Peterson and multiple neck surgeries for Manning.</p>
 	</body>
 </html>
