--- a/index.html
+++ b/index.html
@@ -31,4 +31,6 @@
         <p>Undoubtedly, this is one of the top Broncos teams in the history of the franchise and although they may be the most complete team in football, Denver would be nowhere near the team they are today without <strong>your NFL MVP, Peyton Manning.</strong></p>
         </div>
 	</body>
+   	<footer>Story by: Rich Kurtzman, courtesy of CBS Denver
+   	</footer>
 </html>
