added li for gallery

--- a/index.html
+++ b/index.html
@@ -30,6 +30,14 @@
         <p>What sets Manning apart from Peterson is his outward leadership of the team; specifically, the offense. The old gunslinger knows what it takes to attain greatness in the NFL, being named MVP four previous times and winning a Super Bowl, and he’s pushed his teammates new and old to buy in to his system. They’ve done just that, taking on the intricate and sophisticated offense in an incredibly short period of time. When the game goes to commercial, Manning is there huddling his offense up and going over the small details that, when mastered, push a team beyond good and into the realm of greatness. That offense is the second highest scoring group in all of football and the scary thing for opponents is they’re only continuing to improve.</p>
         <p>Undoubtedly, this is one of the top Broncos teams in the history of the franchise and although they may be the most complete team in football, Denver would be nowhere near the team they are today without <strong>your NFL MVP, Peyton Manning.</strong></p>
         </div>
+        <div>
+        	<ul>
+            	<li><img src="images/mvp.jpg"></li>
+                <li><img src="images/peyton-manning-adrian-peterson.jpg"></li>
+                <li><img src="images/0809-Broncos-NFL-kickoff-Peyton-Manning_full_600.jpg"></li>
+                <li><img src="images/adrianpeterson1.jpg"></li>
+            </ul>
+         </div>   
 	</body>
    	<footer>Story by: Rich Kurtzman, courtesy of CBS Denver
    	</footer>
