--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
      </div>
      <section>
         <h2>2012 Stats & Accomplishments</h2>
-           <p>Manning finished the regular season first in completion percentage (68.8), second in passer rating (105.8), third in touchdowns (37) and sixth in yards (4,659), setting single-season Broncos franchise records for yards, completions (400) and touchdowns thrown. Manning also broke numerous NFL records. In the win over Kansas City to end the season, it was the 73rd time he threw for 3 TDs in a game, passing Brett Favre for most all time and his streak of four games with 300 yards and three scores is an NFL best. His 38 fourth quarter comebacks are more than anyone, while he was named AFC Offensive Player of the Month of October and December, the sixth time he’s taken home the award. When the regular season was over, he had led a team to 10-plus wins for the 12th time, while being voted into the Pro Bowl – <strong>with the most votes of anyone</strong> – for a 12th time, too.</p>
+           <p>Manning finished the regular season first in completion percentage (68.8), second in passer rating (105.8), third in touchdowns (37) and sixth in yards (4,659), setting single-season Broncos franchise records for yards, completions (400) and touchdowns thrown. Manning also broke numerous NFL records. In the win over Kansas City to end the season, it was the 73rd time he threw for 3 TDs in a game, passing Brett Favre for most all time and his streak of four games with 300 yards and three scores is an NFL best. His 38 fourth quarter comebacks are more than anyone, while he was named AFC Offensive Player of the Month of October and December, the sixth time he’s taken home the award. When the regular season was over, he had led a team to 10-plus wins for the 12th time, while being <a href="http://www.nfl.com/probowl/story/0ap1000000114155/article/peyton-manning-tops-tom-brady-in-fans-pro-bowl-voting">voted into the Pro Bowl</a> <strong>with the most votes of anyone</strong> – for a 12th time, too.</p>
       </section>
       <article>  
       	<h2>AD for MVP?</h2>
@@ -37,7 +37,7 @@
                 <li><img src="images/0809-Broncos-NFL-kickoff-Peyton-Manning_full_600.jpg"></li>
                 <li><img src="images/adrianpeterson1.jpg"></li>
             </ul>
-         </div>   
+        </div>   
 	</body>
    	<footer>Story by: Rich Kurtzman, courtesy of CBS Denver
    	</footer>
