added gallery to navigation

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
                     <li><a href="#">Home</a></li>
                     <li><a href="#">2012 Stats</a></li>
                     <li><a href="#">AD for MVP?</a></li>
+                    <li><a href="#">Gallery</a></li>
                 </ul>
             </nav> 
          </header>
@@ -27,11 +28,11 @@
         	<p>Peterson was prodigious in his play; coming a whole nine yards short of breaking Eric Dickerson’s all-time record of 2,105 rushing yards in a single season. Still, AD – short for “All Day,” a nickname given to him by his dad many years ago – ran remarkably, with a by far league leading 6.0 yards per carry average, going over the century mark in a game 10 times this year alone. He’s a workhorse that never gives up, even when getting contacted at or behind the line of scrimmage as he pushes through opponents by driving his supremely strong legs. What makes him most exciting to watch are the seven runs of 50-plus yards and Peterson put up 12 touchdowns this season. Simply stated, he’s a <em>once-in-a-generation type running back</em> that makes everything he does on the football field look effortless.</p>
        </article>
        <div> 
-       <aside>
-        <p>What sets Manning apart from Peterson is his outward leadership of the team; specifically, the offense. The old gunslinger knows what it takes to attain greatness in the NFL, being named MVP four previous times and winning a Super Bowl, and he’s pushed his teammates new and old to buy in to his system. They’ve done just that, taking on the intricate and sophisticated offense in an incredibly short period of time. When the game goes to commercial, Manning is there huddling his offense up and going over the small details that, when mastered, push a team beyond good and into the realm of greatness. That offense is the second highest scoring group in all of football and the scary thing for opponents is they’re only continuing to improve.</p>
-       </aside>
+           <aside>
+            <p>What sets Manning apart from Peterson is his outward leadership of the team; specifically, the offense. The old gunslinger knows what it takes to attain greatness in the NFL, being named MVP four previous times and winning a Super Bowl, and he’s pushed his teammates new and old to buy in to his system. They’ve done just that, taking on the intricate and sophisticated offense in an incredibly short period of time. When the game goes to commercial, Manning is there huddling his offense up and going over the small details that, when mastered, push a team beyond good and into the realm of greatness. That offense is the second highest scoring group in all of football and the scary thing for opponents is they’re only continuing to improve.</p>
+           </aside>
         <p>Undoubtedly, this is one of the top Broncos teams in the history of the franchise and although they may be the most complete team in football, Denver would be nowhere near the team they are today without <strong>your NFL MVP, Peyton Manning.</strong></p>
-        </div>
+       </div>
         <div>
         	<ul>
             	<li><img src="images/mvp.jpg"></li>
