--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
                     <li><a href="#">Home</a></li>
                     <li><a href="#">2012 Stats</a></li>
                     <li><a href="#">AD for MVP?</a></li>
-                    <li><a href="#">allery</a></li>
+                    <li><a href="#">Gallery</a></li>
                 </ul>
             </nav> 
          </header>
