--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset=”utf-8” />
 		<title>Peyton Manning: The Case for MVP</title>
-	</head>
+		<link rel=“stylesheet” href=“wsd-new/css/main.css”>
 	<body>
     	<header>
             <nav>
