--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
        </div>
         <div>
         	<ul>
-            	<li><img src="images/mvp.jpg"></li>
-                <li><img src="images/peyton-manning-adrian-peterson.jpg"></li>
-                <li><img src="images/0809-Broncos-NFL-kickoff-Peyton-Manning_full_600.jpg"></li>
-                <li><img src="images/adrianpeterson1.jpg"></li>
+            	<li><a href="images/mvp.jpg"><img src="images/mvp-thumb.jpg"></li>
+                <li><a href="images/peytonAP1.jpg"><img src="images/peytonAP1-thumb.jpg"></li>
+                <li><a href="images/Peyton1.jpg"><img src="images/Peyton1-thumb.jpg"></li>
+                <li><a href="images/adrianpeterson1.jpg"><img src="images/adrianpeterson1-thumb.jpg"></li>
             </ul>
         </div>   
 	</body>
