--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
 		<link rel="stylesheet" href="css/main.css"
 	<body>
     	<header>
-            <nav>
-                <ul>
+           <div id="navigation">
+               <ul>
                     <li><a href="#">Home</a></li>
                     <li><a href="#">2012 Stats</a></li>
                     <li><a href="#">AD for MVP?</a></li>
                     <li><a href="#">Gallery</a></li>
-                </ul>
-            </nav> 
+               </ul> 
+           </div>
          </header>
-         <br>
+         <br><br><br><br><br>
 	<div>
         <h1>Mile High Feeling for the Mile High City</h1>
 		<p>If a team has multiple skilled players at the same position, they say it is a good problem to have. Well, the NFL has a good problem going, as their league boasts two individuals deserving of the coveted Most Valuable Player award. It is a good problem because it is a hot topic everyone is discussing nationally, but also because Peyton Manning and Adrian Peterson performed phenomenally this season. What’s even more amazing, is that each is coming off important injuries; a torn ACL for Peterson and multiple neck surgeries for Manning.</p>
@@ -34,7 +34,7 @@
            </aside>
         <p>Undoubtedly, this is one of the top Broncos teams in the history of the franchise and although they may be the most complete team in football, Denver would be nowhere near the team they are today without <strong>your NFL MVP, Peyton Manning.</strong></p>
        </div>
-        <div>
+        <div id="gallery">
         	<ul>
             	<li><a href="images/mvp.jpg"><img src="images/mvp-thumb.jpg"></a></li>
                 <li><a href="images/peytonAP1.jpg"><img src="images/peytonAP1-thumb.jpg"></a></li>
