added logo to nav bar

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     	<header>
            <div id="navigation">
                <ul>
+                    <li class="logo"><img src="images/nfl-broncos-logo.png"></li>
                     <li><a href="#">Home</a></li>
                     <li><a href="#">2012 Stats</a></li>
                     <li><a href="#">AD for MVP?</a></li>
