added google web fonts

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang=”en”>
 	<head>
+    	<link href='http://fonts.googleapis.com/css?family=Racing+Sans+One' rel='stylesheet' type='text/css'>
 		<meta charset=”utf-8” />
 		<title>Peyton Manning: The Case for MVP</title>
 		<link rel="stylesheet" href="css/main.css"
