--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
                     <li><a href="#">Gallery</a></li>
                </ul> 
            </div>
-         </header>
-         </body>
+        </header>
+      </body>
        <div class="col1">
-	<div id="paragraph1">
+		<div id="paragraph1">
         <h1>Mile High Feeling for the Mile High City</h1>
 		<p>If a team has multiple skilled players at the same position, they say it is a good problem to have. Well, the NFL has a good problem going, as their league boasts two individuals deserving of the coveted Most Valuable Player award. It is a good problem because it is a hot topic everyone is discussing nationally, but also because Peyton Manning and Adrian Peterson performed phenomenally this season. What’s even more amazing, is that each is coming off important injuries; a torn ACL for Peterson and multiple neck surgeries for Manning.</p>
     </div>
@@ -52,6 +52,6 @@
 	</body>
   </div>
 </div>
-   	<footer class="footer">Story by: Rich Kurtzman, courtesy of CBS Denver
-   	</footer>
+   	<div id="footer">Story by: Rich Kurtzman, courtesy of CBS Denver
+   	</div>
 </html>
