--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang=”en”>
+<html lang=”EN”></html>
 	<head>
     	<link href='http://fonts.googleapis.com/css?family=Racing+Sans+One' rel='stylesheet' type='text/css'>
-		<meta charset=”utf-8” />
+		<meta charset=”utf-8”/>
 		<title>Peyton Manning: The Case for MVP</title>
 		<link rel="stylesheet" href="css/main.css">
 <div class="fullpage"> 
@@ -10,24 +10,24 @@
     	<header>
            <div id="navigation">
                <ul>
-                    <li class="logo"><img src="images/nfl-broncos-logo.png"></li>
+                    <li class="logo"><img src="images/nfl-broncos-logo.png" alt="logo"></li>
                     <li><a href="#">Home</a></li>
-                    <li><a href="#">2012 Stats</a></li>
-                    <li><a href="#">AD for MVP?</a></li>
-                    <li><a href="#">Gallery</a></li>
+                    <li><a href="#stats">2012 Stats</a></li>
+                    <li><a href="#ap">AD for MVP?</a></li>
+                    <li><a href="#gallery">Gallery</a></li>
                </ul> 
            </div>
         </header>
       </body>
-       <div class="col1">
+<div class="col1">
 		<div id="paragraph1">
         <h1>Mile High Feeling for the Mile High City</h1>
 		<p>If a team has multiple skilled players at the same position, they say it is a good problem to have. Well, the NFL has a good problem going, as their league boasts two individuals deserving of the coveted Most Valuable Player award. It is a good problem because it is a hot topic everyone is discussing nationally, but also because Peyton Manning and Adrian Peterson performed phenomenally this season. What’s even more amazing, is that each is coming off important injuries; a torn ACL for Peterson and multiple neck surgeries for Manning.</p>
-    </div>
+    	</div>
      <div id="gallery">
      	<h2 class="gallery">Gallery</h2>
         	<ul>
-            	<li><a href="images/mvp.jpg"><img src="images/mvp-thumb.jpg"></a></li>
+            	<li><a href="images/mvp.jpg"><img src="images/mvp-thumb.jpg" alt="mvp"></a></li>
                 <li><a href="images/peytonAP1.jpg"><img src="images/peytonAP1-thumb.jpg"></a></li>
                 <li><a href="images/Peyton1.jpg"><img src="images/Peyton1-thumb.jpg"></a></li>
                 <li><a href="images/adrianpeterson1.jpg"><img src="images/adrianpeterson1-thumb.jpg"></a></li>
