--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
         <h1>Mile High Feeling for the Mile High City</h1>
 		<p>If a team has multiple skilled players at the same position, they say it is a good problem to have. Well, the NFL has a good problem going, as their league boasts two individuals deserving of the coveted Most Valuable Player award. It is a good problem because it is a hot topic everyone is discussing nationally, but also because Peyton Manning and Adrian Peterson performed phenomenally this season. What’s even more amazing, is that each is coming off important injuries; a torn ACL for Peterson and multiple neck surgeries for Manning.</p>
     	</div>
-     <div id="gallery">
+    <div id ="wrapper">
+     <section id="gallery">
      	<h2 class="gallery">Gallery</h2>
         	<ul>
             	<li><a href="images/mvp.jpg"><img src="images/mvp-thumb.jpg" alt="mvp"></a></li>
@@ -32,11 +33,12 @@
                 <li><a href="images/Peyton1.jpg"><img src="images/Peyton1-thumb.jpg"></a></li>
                 <li><a href="images/adrianpeterson1.jpg"><img src="images/adrianpeterson1-thumb.jpg"></a></li>
             </ul>
-      </div> 
+      </section> 
      <section id="stats">
         <h2 class="heading2">2012 Stats</h2>
            <p>Manning finished the regular season first in completion percentage (68.8), second in passer rating (105.8), third in touchdowns (37) and sixth in yards (4,659), setting single-season Broncos franchise records for yards, completions (400) and touchdowns thrown. Manning also broke numerous NFL records. In the win over Kansas City to end the season, it was the 73rd time he threw for 3 TDs in a game, passing Brett Favre for most all time and his streak of four games with 300 yards and three scores is an NFL best. His 38 fourth quarter comebacks are more than anyone, while he was named AFC Offensive Player of the Month of October and December, the sixth time he’s taken home the award. When the regular season was over, he had led a team to 10-plus wins for the 12th time, while being <a href="http://www.nfl.com/probowl/story/0ap1000000114155/article/peyton-manning-tops-tom-brady-in-fans-pro-bowl-voting">voted into the Pro Bowl</a> <strong>with the most votes of anyone</strong> – for a 12th time, too.</p>
      </section>
+    </div>
      <div id="bottom"> 
       <article id="ap">  
       	<h2>AD for MVP?</h2>
