linked logo to broncos website

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 	<div id="navigation">
     	<ul>
-        	<li class="logo"><img src="images/nfl-broncos-logo.png" alt="logo"></li>
+        	<li class="logo"><a href="www.denverbroncos.com"><img src="images/nfl-broncos-logo.png" alt="logo"></a></li>
             <li><a href="#">Home</a></li>
             <li><a href="#stats">2012 Stats</a></li>
             <li><a href="#ap">AD for MVP?</a></li>
