--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     
     	<div id ="wrapper">
     		<section id="gallery">
-     			<h2 class="gallery">Gallery</h2>
+     			<h2 class="gallery-text">Gallery</h2>
         			<ul>
             			<li><a href="images/mvp.jpg"><img src="images/mvp-thumb.jpg" alt="mvp"></a></li>
                 		<li><a href="images/peytonAP1.jpg"><img src="images/peytonAP1-thumb.jpg"></a></li>
