--- a/index.html
+++ b/index.html
@@ -86,16 +86,16 @@
         </form>
         </div>
    </div>
-          <table>
+          <table><center><h2>Regular Season W/L Record</h2></center>
 <tr>
-<th>2012</th>
-<th>2010</th>
 <th>2009</th>
+<th>2010</th>
+<th>2012</th>
 </tr>
 <tr>
-<td>win</td>
-<td>win</td>
-<td>win</td>
+<td>14-2 w/ Colts</td>
+<td>10-6 w/ Colts</td>
+<td>13-3 w/ Broncos</td>
 </tr>
 </table>
 
